config.yaml/service-nginx-multitool.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: netology-config
spec:
  selector:
    app: nginx-multitool
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
